[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.7.1"
cortex-m-rtic = "0.6.0"
stm32f4 = "0.16.0"
nb = "1.0.0"
embedded-hal = "0.2.4"
dht-sensor = "0.3.0"
nrf24 = "0.22.0"
